{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "BaseGameplay",
            "id": "883a43ad-6844-4057-a092-f659ac72b345",
            "actions": [
                {
                    "name": "MoveX",
                    "type": "Value",
                    "id": "b17315f1-fc2b-4144-b40f-ebe454022fed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b5073d45-3a1f-454c-a134-33f702310743",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionFlash",
                    "type": "Button",
                    "id": "2b07404c-a3b1-470e-9e9d-380e486b2670",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AimDirection",
                    "type": "Value",
                    "id": "bfeb9947-f1c5-4916-b125-df00a263f9a5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab374f75-0754-4ed9-8be4-3e3964870390",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9db5c3b-c7c6-4247-a74c-f30dc2c2fe70",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45bac4e0-7f43-4610-bb2d-4f42c75618fe",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionFlash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47755600-4a2e-437e-a088-388d5ed84334",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}